trunk/Archive2/aa/bf4f966bf5826e/output
main.cpp:8:5: error: no matching function for call to 'foo'
    foo({1,2,3});
    ^~~
main.cpp:4:6: note: candidate template ignored: couldn't infer template argument 'T'
void foo(T&&) {}
     ^
1 error generated.
