trunk/Archive2/aa/bf4f966bf5826e/main.cpp
#include <initializer_list>

template<class T>
void foo(T&&) {}

int main()
{
    foo({1,2,3});
}